# agentpriinter

./: conftest.py  pyproject.toml
Scopes/: DEVELOPER_INFO.md  GLOSSARY.md  GRAPH.md  INDEX.md
Scopes/Product/: README.md
Scopes/Product/Backend/: WebSocket_Runtime.md
Scopes/Product/Contracts/: Protocol_Schema.md
Scopes/Product/Examples/: Demo_Apps.md
Scopes/Product/Frontend/: Remote_UI_Runtime.md
Scopes/Research/: 2026-02-01-examples-real-demo-context.md
Scopes/Work/Bugs/: 2026-02-01-general-scan-seq-resume-and-transport-footguns.md
Scopes/Work/Planning/: PROJECT_GOAL.md
Scopes/Work/Refactors/: 2026-02-01-frontend-big-files.md
Scopes/Work/STDD/: 2026-02-01-action-contract-alignment.md  2026-02-01-backend-resume.md  2026-02-01-computed-bindings.md  2026-02-01-frontend-resume.md  2026-02-01-protocol-seq-contract.md  2026-02-01-schema-driven-forms.md  (+1 more)
scripts/: export_schema.py
src/agentprinter_fastapi/: __init__.py  actions.py  adapters.py  agent.py  agent_adapters.py  agent_examples.py  backpressure.py  components.py  devtools.py  manager.py  router.py  templates.py  transport.py  transports.py  validation.py
tests/: test_action_integration.py  test_actions.py  test_agent.py  test_agent_adapters.py  test_agent_patch.py  test_all_features.py  test_backpressure_rate_limits.py  test_demo_integration.py  test_integration.py  test_llm_adapters.py  test_manager.py  test_real_agents.py  test_resume_handling.py  test_router.py  test_schemas.py  test_sse_fallback.py  test_template_e2e.py  test_template_loader.py  test_ui_actions.py  test_ui_patch_nav.py
(+31 files in other folders)
